.k8s/apps/valoris.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: valoris
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: valoris
    helm.sh/chart: app-template-4.2.0
    kubenix/hash: b12e127bc8aa028b2fe3c0b931af9c151c1179b9
    kubenix/module-instance: valoris
    kubenix/module-name: release
    kubenix/module-version: 1.0.0
  name: valoris
  namespace: apps
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/instance: valoris
      app.kubernetes.io/name: valoris
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: valoris
        app.kubernetes.io/name: valoris
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - lab-pi-bk
      automountServiceAccountToken: true
      containers:
        - env:
            - name: KEYCLOAK_AUTHORITY
              value: https://identity.josevictor.me/realms/valoris
            - name: KEYCLOAK_CLIENT_ID
              value: valoris-frontend
          image: ghcr.io/josevictorferreira/valoris-frontend:latest
          imagePullPolicy: Always
          name: main
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          resources:
            limits:
              memory: 1Gi
            requests:
              memory: 256Mi
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      imagePullSecrets:
        - name: ghcr-registry-secret
      priorityClassName: preemptible
      serviceAccountName: default
      tolerations:
        - effect: NoSchedule
          key: pi-only
          operator: Equal
          value: "true"
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
    lbipam.cilium.io/ips: 10.10.10.134
    lbipam.cilium.io/sharing-key: valoris
  labels:
    app.kubernetes.io/instance: valoris
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: valoris
    app.kubernetes.io/service: valoris
    helm.sh/chart: app-template-4.2.0
    kubenix/hash: b12e127bc8aa028b2fe3c0b931af9c151c1179b9
    kubenix/module-instance: valoris
    kubenix/module-name: release
    kubenix/module-version: 1.0.0
  name: valoris
  namespace: apps
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: valoris
    app.kubernetes.io/name: valoris
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/instance: valoris
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: valoris
    helm.sh/chart: app-template-4.2.0
    kubenix/hash: b12e127bc8aa028b2fe3c0b931af9c151c1179b9
    kubenix/module-instance: valoris
    kubenix/module-name: release
    kubenix/module-version: 1.0.0
  name: valoris
  namespace: apps
spec:
  ingressClassName: cilium
  rules:
    - host: valoris.josevictor.me
      http:
        paths:
          - backend:
              service:
                name: valoris
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - valoris.josevictor.me
      secretName: wildcard-tls
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: valoris-backend
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: valoris-backend
    helm.sh/chart: app-template-4.2.0
    kubenix/hash: b12e127bc8aa028b2fe3c0b931af9c151c1179b9
    kubenix/module-instance: valoris-backend
    kubenix/module-name: release
    kubenix/module-version: 1.0.0
  name: valoris-backend
  namespace: apps
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/instance: valoris-backend
      app.kubernetes.io/name: valoris-backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: valoris-backend
        app.kubernetes.io/name: valoris-backend
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - lab-pi-bk
      automountServiceAccountToken: true
      containers:
        - command:
            - bundle
            - exec
            - rails
            - server
            - -p
            - "80"
          image: ghcr.io/josevictorferreira/valoris-backend:latest
          imagePullPolicy: Always
          name: main
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          resources:
            limits:
              memory: 512Mi
            requests:
              memory: 256Mi
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      imagePullSecrets:
        - name: ghcr-registry-secret
      priorityClassName: preemptible
      serviceAccountName: default
      tolerations:
        - effect: NoSchedule
          key: pi-only
          operator: Equal
          value: "true"
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
    lbipam.cilium.io/ips: 10.10.10.131
    lbipam.cilium.io/sharing-key: valoris-backend
  labels:
    app.kubernetes.io/instance: valoris-backend
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: valoris-backend
    app.kubernetes.io/service: valoris-backend
    helm.sh/chart: app-template-4.2.0
    kubenix/hash: b12e127bc8aa028b2fe3c0b931af9c151c1179b9
    kubenix/module-instance: valoris-backend
    kubenix/module-name: release
    kubenix/module-version: 1.0.0
  name: valoris-backend
  namespace: apps
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: valoris-backend
    app.kubernetes.io/name: valoris-backend
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/instance: valoris-backend
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: valoris-backend
    helm.sh/chart: app-template-4.2.0
    kubenix/hash: b12e127bc8aa028b2fe3c0b931af9c151c1179b9
    kubenix/module-instance: valoris-backend
    kubenix/module-name: release
    kubenix/module-version: 1.0.0
  name: valoris-backend
  namespace: apps
spec:
  ingressClassName: cilium
  rules:
    - host: valoris-backend.josevictor.me
      http:
        paths:
          - backend:
              service:
                name: valoris-backend
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - valoris-backend.josevictor.me
      secretName: wildcard-tls
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: valoris-worker
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: valoris-worker
    helm.sh/chart: app-template-4.2.0
    kubenix/hash: b12e127bc8aa028b2fe3c0b931af9c151c1179b9
    kubenix/module-instance: valoris-worker
    kubenix/module-name: release
    kubenix/module-version: 1.0.0
  name: valoris-worker
  namespace: apps
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/instance: valoris-worker
      app.kubernetes.io/name: valoris-worker
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: valoris-worker
        app.kubernetes.io/name: valoris-worker
    spec:
      automountServiceAccountToken: true
      containers:
        - command:
            - bundle
            - exec
            - bin/jobs
            - start
          image: ghcr.io/josevictorferreira/valoris-backend:latest
          imagePullPolicy: Always
          name: main
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          resources:
            limits:
              memory: 1536Mi
            requests:
              memory: 512Mi
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      imagePullSecrets:
        - name: ghcr-registry-secret
      priorityClassName: preemptible
      serviceAccountName: default
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
    lbipam.cilium.io/ips: 10.10.10.132
    lbipam.cilium.io/sharing-key: valoris-worker
  labels:
    app.kubernetes.io/instance: valoris-worker
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: valoris-worker
    app.kubernetes.io/service: valoris-worker
    helm.sh/chart: app-template-4.2.0
    kubenix/hash: b12e127bc8aa028b2fe3c0b931af9c151c1179b9
    kubenix/module-instance: valoris-worker
    kubenix/module-name: release
    kubenix/module-version: 1.0.0
  name: valoris-worker
  namespace: apps
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: valoris-worker
    app.kubernetes.io/name: valoris-worker
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/instance: valoris-worker
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: valoris-worker
    helm.sh/chart: app-template-4.2.0
    kubenix/hash: b12e127bc8aa028b2fe3c0b931af9c151c1179b9
    kubenix/module-instance: valoris-worker
    kubenix/module-name: release
    kubenix/module-version: 1.0.0
  name: valoris-worker
  namespace: apps
spec:
  ingressClassName: cilium
  rules:
    - host: valoris-worker.josevictor.me
      http:
        paths:
          - backend:
              service:
                name: valoris-worker
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - valoris-worker.josevictor.me
      secretName: wildcard-tls
